# PreProduction

./: .env.example  .gitignore  README.md  SETUP_GUIDE.md  docker-compose.yml  pyproject.toml  requirements.txt  샷브레이크다운_시작.bat  샷브레이크다운_중지.bat  외부공유주소_보기.bat
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: auth.py  budget.py  config.py  database.py  jobs.py  main.py  models.py  scenario_jobs.py  schemas.py
backend/app/routers/: characters.py  projects.py  scenarios.py  shots.py  users.py
frontend/: Dockerfile  next.config.js  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/backend/[...path]/: route.ts
frontend/src/app/characters/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/projects/[id]/: page.tsx
frontend/src/app/scenarios/: page.tsx
frontend/src/app/scenarios/[id]/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: Header.tsx  JobProgress.tsx  ProjectBudgetCard.tsx  ShotTable.tsx  UploadForm.tsx
frontend/src/lib/: api.ts  auth.ts
shotbreakdown/: __init__.py  __main__.py  cli.py  detect.py  detect_transnet.py  export.py  extract.py  image_gen.py  models.py  pipeline.py  scenario.py  scenario_export.py  timecode.py
shotbreakdown/providers/: __init__.py  base.py  gemini.py
